--- a/index.html
+++ b/index.html
@@ -171,10 +171,16 @@
       <img src="Images\Hi-x55 Austin.jpg" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="Images\bobo.jpg" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="Images\grug.jpg" class="d-block w-100">
+    </div>
+	<div class="carousel-item">
+      <img src="Images\akg.jpg" class="d-block w-100">
+    </div>
+	<div class="carousel-item">
+      <img src="Images\seb.jpg" class="d-block w-100">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -191,21 +197,15 @@
 
 
 <!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (START) -->
-<div>
-
-
-
-
-
-
-
-
+<div class="container">
+	<n> Updates </n>
+	<n> Day of the bobo </n>
 	<button type="button" class="btn btn-lg btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
 		<span class="material-symbols-outlined">  </span>
 	</button>
 	<ul class="dropdown-menu">
-		<li><button class="dropdown-item" type="button">					</button></li>
-		<li><button class="dropdown-item" type="button">					</button></li>
+		<li><button class="dropdown-item" type="button">Add line per update</button></li>
+		<li><button class="dropdown-item" type="button">Add line per update</button></li>
 	</ul>
 </div>
 <!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (END) -->
@@ -215,7 +215,7 @@
 <!-- Footer START -->
 <footer>
 	<div class="container-fluid footer py-3 bg-dark">
-		BOBOBOBOBOBOBBOBOBOBOBOBOBBOBOBOBOBOBOBOBOBBOBOBOBOBOBOBOBOBOBOOBOBOBOBOBOBOBOBO
+		<n> 
 	</div>
 </footer>
 <!-- Footer END -->
