--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <div class="p-3 mb-2 bg-white">
 
 
-
 <style>
 	.container {border: 1px solid black;}
 	
@@ -97,9 +96,8 @@
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button">What your looking for</button></li>
-						<li><button class="dropdown-item" type="button">The Reviews</button></li>
-						<li><button class="dropdown-item" type="button">Some other stuff</button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a1.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What your looking for </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a2.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> The Reviews </a> </button></li>
 					</ul>
 				</div>
 			</div>
@@ -111,9 +109,8 @@
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button">What things mean</button></li>
-						<li><button class="dropdown-item" type="button">What good and what ain't</button></li>
-						<li><button class="dropdown-item" type="button">Juan</button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a3.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What things mean </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a4.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What good and what ain't </a> </button></li>
 					</ul>
 				</div>
 			</div>
@@ -125,8 +122,8 @@
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button">What to do</button></li>
-						<li><button class="dropdown-item" type="button">Why it's important</button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a5.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What to do </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a6.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Why it's important </a> </button></li>
 					</ul>
 				</div>
 			</div>
@@ -138,9 +135,8 @@
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button">Big Brands</button></li>
-						<li><button class="dropdown-item" type="button">Trusted Brands</button></li>
-						<li><button class="dropdown-item" type="button">AAAAAAAAAAAAAAAAAAAAAAA</button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a7.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Big Brands </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a8.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Trusted Brands </a> </button></li>
 					</ul>
 				</div>
 			</div>
@@ -152,8 +148,10 @@
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button">The different types of audio</button></li>
-						<li><button class="dropdown-item" type="button">How they do</button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a9.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> The different types of audio </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a10.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Dynamic Speaker </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a11.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Planar Magnetic </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a12.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Electrostatic </a> </button></li>
 					</ul>
 				</div>
 			</div>
@@ -198,24 +196,46 @@
 
 <!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (START) -->
 <div class="container">
-	<n> Updates </n>
-	<n> Day of the bobo </n>
-	<button type="button" class="btn btn-lg btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-		<span class="material-symbols-outlined">  </span>
-	</button>
-	<ul class="dropdown-menu">
-		<li><button class="dropdown-item" type="button">Add line per update</button></li>
-		<li><button class="dropdown-item" type="button">Add line per update</button></li>
-	</ul>
+	<div class="position-relative">
+		<div class="position-absolute bottom-0 start-50 translate-middle">
+			<p class="fs-1"> <n> New Update: xx/yy/zz </n> </p>
+			<button type="button" class="btn btn-lg btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+				<span class="material-symbols-outlined">  </span>
+			</button>
+			</p>
+			<ul class="dropdown-menu">
+				<li><button class="dropdown-item" type="button"> <a href="a1.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Update 1 </a> </button></li>
+				<li><button class="dropdown-item" type="button"> <a href="a1.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Update 2 </a> </button></li>
+			</ul>
+		</div>
+	</div>
 </div>
 <!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (END) -->
 
 
 
 <!-- Footer START -->
-<footer>
-	<div class="container-fluid footer py-3 bg-dark">
-		<n> 
+<footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
+	<div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
+		<div class="row">
+			<div class="col-lg-3 mb-3">
+				<a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
+					<img src="Images/aubiofabicom.png" width="40"> </img>
+					<span class="fs-5">Audio House</span>
+				</a>
+				<ul class="list-unstyled small">
+					<li class="mb-2">Built from bootstrap</li>
+					<svg xmlns="http://www.w3.org/2000/svg" width="50" height="100" class="d-block me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
+				</ul>
+			</div>
+			<div class="col-6 col-lg-2 offset-lg-1 mb-3">
+				<h5>About</h5>
+				<ul class="list-unstyled">
+					<li class="mb-2"><a href="b1.html">Myself</a></li>
+					<li class="mb-2"><a href="b2.html">The Website</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 </footer>
 <!-- Footer END -->
