--- a/b2.html
+++ b/b2.html
@@ -83,6 +83,20 @@
 </nav>
 <!-- NAVBARD END -->
 
+
+<!-- TEXT START -->
+
+<div class="container-xxl">
+	
+	<div class="container-xxl">
+		<img src="">
+	</div>
+	
+</div>
+
+<!-- TEXT END -->
+
+
 </div>
 	
 <!-- DO NOT EDIT BELOW THIS LINE -->
