--- a/a6.html
+++ b/a6.html
@@ -83,6 +83,17 @@
 </nav>
 <!-- NAVBARD END -->
 
+
+<!-- TEXT START -->
+
+<div class="container-xxl">
+
+
+</div>
+
+<!-- TEXT END -->
+
+
 </div>
 	
 <!-- DO NOT EDIT BELOW THIS LINE -->
