--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
 
 <nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><IMG src="Images\AubioHaus.png"/></a>
+    <a class="navbar-brand"><IMG src="Images\AubioHaus.png"/></a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	<div class="elementor-element elementor-element-77ce78e e-grid-align-right e-grid-align-tablet-right elementor-shape-rounded elementor-grid-0 elementor-widget elementor-widget-social-icons elementor-sticky" data-id="77ce78e" data-element_type="widget" data-settings="{&quot;sticky&quot;:&quot;top&quot;,&quot;sticky_on&quot;:[&quot;mobile&quot;],&quot;sticky_offset&quot;:23,&quot;sticky_effects_offset&quot;:0}" data-widget_type="social-icons.default">
-
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <div class="nav-item">
 			<a class="elementor-icon elementor-social-icon elementor-social-icon-reddit elementor-animation-grow elementor-repeater-item-cadc557" href="https://www.google.com/search?client=avast-a-2&q=this+goes+to+a+related+subreddit&oq=this+goes+to+a+related+subreddit&aqs=avast..69i57.7242j0j1&ie=UTF-8" target="_blank">
@@ -86,18 +85,18 @@
 
 
 <!-- SECTIONS HERE -->
-<div class="container-fluid">
+<div class="container-fluid text-black">
 	<div class="border">
 		<div class="row justify-content-evenly">
 			<div class="col-2">
 				<div class="dropdown">
-						How To Choose
+					How To Choose
 					<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button"> <a href="a1.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What your looking for </a> </button></li>
-						<li><button class="dropdown-item" type="button"> <a href="a2.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> The Reviews </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a1.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What You're Looking For </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a2.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Cheeking Reviews </a> </button></li>
 					</ul>
 				</div>
 			</div>
@@ -109,8 +108,8 @@
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button"> <a href="a3.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What things mean </a> </button></li>
-						<li><button class="dropdown-item" type="button"> <a href="a4.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What good and what ain't </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a3.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What Does Anything Mean? </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a4.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What's Good and What Isn't </a> </button></li>
 					</ul>
 				</div>
 			</div>
@@ -122,8 +121,8 @@
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button"> <a href="a5.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What to do </a> </button></li>
-						<li><button class="dropdown-item" type="button"> <a href="a6.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Why it's important </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a5.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What To Do </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a6.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Why It's Important </a> </button></li>
 					</ul>
 				</div>
 			</div>
@@ -198,15 +197,17 @@
 <div class="container">
 	<div class="position-relative">
 		<div class="position-absolute bottom-0 start-50 translate-middle">
-			<p class="fs-1"> <n> New Update: xx/yy/zz </n> </p>
+			<p class="fs-1 text-white"> New Update: xx/yy/zz </p>
 			<button type="button" class="btn btn-lg btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
 				<span class="material-symbols-outlined">  </span>
 			</button>
 			</p>
+			<div class="position-relative bottom-0 start-50 translate-middle-x">
 			<ul class="dropdown-menu">
 				<li><button class="dropdown-item" type="button"> <a href="a1.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Update 1 </a> </button></li>
 				<li><button class="dropdown-item" type="button"> <a href="a1.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Update 2 </a> </button></li>
 			</ul>
+			</div>
 		</div>
 	</div>
 </div>
@@ -225,7 +226,9 @@
 				</a>
 			</div>
 			<div class="col-6 col-lg-2 offset-lg-1 mb-3">
-				<h5>About</h5>
+				<div class="text-white">
+					<h5>About</h5>
+				</div>
 				<ul class="list-unstyled">
 					<li class="mb-2"><a href="b1.html">Myself</a></li>
 					<li class="mb-2"><a href="b2.html">The Website</a></li>
