--- a/a1.html
+++ b/a1.html
@@ -86,12 +86,24 @@
 
 <!-- TEXT START -->
 
-<div class="container-xxl">
-
-
+<div class="container-fluid">
+Some text about what you want in your stuff.
+	<a> <img src="Images\bobo.jpg" class="w-100"> </a>
+The placeholder image depicts an example.
 </div>
 
 <!-- TEXT END -->
+
+
+<!--PAGES TAB START-->
+
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group me-2" role="group" aria-label="First group">
+    <button type="button" href="a1.html" class="btn btn-primary">What You're Looking For</button>
+    <button type="button" href="a2.html" class="btn btn-primary">Cheeking Reviews</button>
+  </div>
+
+<!--PAGES TAB END-->
 
 
 </div>
