--- a/a4.html
+++ b/a4.html
@@ -88,10 +88,24 @@
 
 <div class="container-xxl">
 
+	<div class="container-xxl">
+		<img src="">
+	</div>
 
 </div>
 
 <!-- TEXT END -->
+
+
+<!--PAGES TAB START-->
+
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group me-2" role="group" aria-label="First group">
+    <button type="button" href="a3.html" class="btn btn-primary">What Does Anything Mean</button>
+    <button type="button" href="a4.html" class="btn btn-primary">What's Good and What Isn't</button>
+  </div>
+
+<!--PAGES TAB END-->
 
 
 </div>
