--- a/a7.html
+++ b/a7.html
@@ -88,10 +88,24 @@
 
 <div class="container-xxl">
 
+	<div class="container-xxl">
+		<img src="">
+	</div>
 
 </div>
 
 <!-- TEXT END -->
+
+
+<!--PAGES TAB START-->
+
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group me-2" role="group" aria-label="First group">
+    <button type="button" href="a7.html" class="btn btn-primary">Big Brands</button>
+    <button type="button" href="a8.html" class="btn btn-primary">Trusted Brands</button>
+  </div>
+
+<!--PAGES TAB END-->
 
 
 </div>
