--- a/a9.html
+++ b/a9.html
@@ -88,10 +88,27 @@
 
 <div class="container-xxl">
 
+	<div class="container-xxl">
+		<img src="">
+	</div>
 
 </div>
 
 <!-- TEXT END -->
+
+
+<!--PAGES TAB START-->
+
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group me-2" role="group" aria-label="First group">
+    <button type="button" href="a9.html" class="btn btn-primary">What You're Looking For</button>
+    <button type="button" href="a10.html" class="btn btn-primary">Cheeking Reviews</button>
+	<button type="button" href="a11.html" class="btn btn-primary">What You're Looking For</button>
+    <button type="button" href="a12.html" class="btn btn-primary">Cheeking Reviews</button>
+  </div>
+</div>
+
+<!--PAGES TAB END-->
 
 
 </div>
