--- a/b2.html
+++ b/b2.html
@@ -97,6 +97,17 @@
 <!-- TEXT END -->
 
 
+<!--PAGES TAB START-->
+
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group me-2" role="group" aria-label="First group">
+    <button type="button" href="a1.html" class="btn btn-primary">What You're Looking For</button>
+    <button type="button" href="a2.html" class="btn btn-primary">Cheeking Reviews</button>
+  </div>
+
+<!--PAGES TAB END-->
+
+
 </div>
 	
 <!-- DO NOT EDIT BELOW THIS LINE -->
