--- a/a5.html
+++ b/a5.html
@@ -101,10 +101,11 @@
 
 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
   <div class="btn-group me-2" role="group" aria-label="First group">
-    <button type="button" href="a5.html" class="btn btn-primary">What To Do</button>
-    <button type="button" href="a6.html" class="btn btn-primary">Why It's Important</button>
+    <button type="button" class="btn btn-secondary"><a href="a5.html">What To Do</a></button>
+    <button type="button" class="btn btn-secondary"><a href="a6.html">Why It's Important</a></button>
+	<button type="button" class="btn btn-secondary"><a href="index.html">Home</a></button>
   </div>
-
+</div>
 <!--PAGES TAB END-->
 
 
