--- a/a12.html
+++ b/a12.html
@@ -101,10 +101,13 @@
 
 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
   <div class="btn-group me-2" role="group" aria-label="First group">
-    <button type="button" href="a1.html" class="btn btn-primary">What You're Looking For</button>
-    <button type="button" href="a2.html" class="btn btn-primary">Cheeking Reviews</button>
+    <button type="button" class="btn btn-secondary"><a href="a9.html"> What You're Looking For</a></button>
+    <button type="button" class="btn btn-secondary"><a href="a10.html"> Cheeking Reviews</a></button>
+	<button type="button" class="btn btn-secondary"><a href="a11.html">What You're Looking For</a></button>
+    <button type="button" class="btn btn-secondary"><a href="a12.html">Cheeking Reviews</a></button>
+	<button type="button" class="btn btn-secondary"><a href="index.html">Home</a></button>
   </div>
-
+</div>
 <!--PAGES TAB END-->
 
 
