--- a/a2.html
+++ b/a2.html
@@ -98,12 +98,14 @@
 
 
 <!--PAGES TAB START-->
-
+<div class="position-absolute start-50 translate-middle-x">
 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
   <div class="btn-group me-2" role="group" aria-label="First group">
-    <button type="button" href="a1.html" class="btn btn-primary">What You're Looking For</button>
-    <button type="button" href="a2.html" class="btn btn-primary">Cheeking Reviews</button>
+    <button type="button" class="btn btn-secondary"><a href="a1.html">What You're Looking For</a></button>
+    <button type="button" class="btn btn-secondary"><a href="a2.html">Cheeking Reviews</a></button>
+	<button type="button" class="btn btn-secondary"><a href="index.html">Home</a></button>
   </div>
+</div>
 </div>
 <!--PAGES TAB END-->
 
