--- a/a3.html
+++ b/a3.html
@@ -101,10 +101,11 @@
 
 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
   <div class="btn-group me-2" role="group" aria-label="First group">
-    <button type="button" href="a3.html" class="btn btn-primary">What Does Anything Mean</button>
-    <button type="button" href="a4.html" class="btn btn-primary">What's Good and What Isn't</button>
+    <button type="button" class="btn btn-secondary"><a href="a3.html">What Does Anything Mean</a></button>
+    <button type="button" class="btn btn-secondary"><a href="a4.html">What's Good and What Isn't</a></button>
+	<button type="button" class="btn btn-secondary"><a href="index.html">Home</a></button>
   </div>
-
+</div>
 <!--PAGES TAB END-->
 
 
