--- a/a8.html
+++ b/a8.html
@@ -101,10 +101,11 @@
 
 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
   <div class="btn-group me-2" role="group" aria-label="First group">
-    <button type="button" href="a7.html" class="btn btn-primary">Big Brands</button>
-    <button type="button" href="a8.html" class="btn btn-primary">Trusted Brands</button>
+    <button type="button" class="btn btn-secondary"><a href="a7.html"> Big Brands</a></button>
+    <button type="button" class="btn btn-secondary"><a href="a8.html"> Trusted Brands</a></button>
+	<button type="button" class="btn btn-secondary"><a href="index.html">Home</a></button>
   </div>
-
+</div>
 <!--PAGES TAB END-->
 
 
