--- a/b2.html
+++ b/b2.html
@@ -101,10 +101,11 @@
 
 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
   <div class="btn-group me-2" role="group" aria-label="First group">
-    <button type="button" href="a1.html" class="btn btn-primary">What You're Looking For</button>
-    <button type="button" href="a2.html" class="btn btn-primary">Cheeking Reviews</button>
+    <button type="button" class="btn btn-secondary"><a href="b1.html">Myself</a></button>
+    <button type="button" class="btn btn-secondary"><a href="b2.html">The Website</a></button>
+	<button type="button" class="btn btn-secondary"><a href="index.html">Home</a></button>
   </div>
-
+</div>
 <!--PAGES TAB END-->
 
 
