--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button"> <a href="a3.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What Does Anything Mean? </a> </button></li>
-						<li><button class="dropdown-item" type="button"> <a href="a4.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What's Good and What Isn't </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a3.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">What Does Anything Mean</a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a4.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">What's Good and What Isn't</a> </button></li>
 					</ul>
 				</div>
 			</div>
@@ -121,8 +121,8 @@
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button"> <a href="a5.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> What To Do </a> </button></li>
-						<li><button class="dropdown-item" type="button"> <a href="a6.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"> Why It's Important </a> </button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a5.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">What To Do</a></button></li>
+						<li><button class="dropdown-item" type="button"> <a href="a6.html" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Why It's Important</a></button></li>
 					</ul>
 				</div>
 			</div>
